--- a/assets/scss/blocks/sidenav.scss
+++ b/assets/scss/blocks/sidenav.scss
@@ -10,9 +10,12 @@
   overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 60px; /* Place content 60px from the top */
   transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
-
+  ul.mainMenu{
+    padding: 0;
+    list-style: none;
+  }
   a {
-    padding: 8px 8px 8px 32px;
+    padding: 8px 8px 8px 16px;
     text-decoration: none;
     font-size: 25px;
     color: #818181;
